# JobMatch

./: .gitignore  README.md  build.gradle  comprehensive_test.py  cv_summary.json  demo_industry_detection.py  docker-compose.yml  launch_system.bat  main.py  preprocessing.py  pyproject.toml  test_marketing_jd.py  test_multiple_cvs.py
CV-Job-matching-main/: Matching_Algorithm.ipynb  requirements.txt  seg-net.ipynb
app/: __init__.py  page.tsx
backend/: .dockerignore  Dockerfile  build.gradle  docker-build.sh  docker-compose.yml
components/: recruiter-layout.tsx
cv-matching-frontend/: pnpm-lock.yaml
cv_match_API/: README.md  document_processor.py  main.py  requiments.txt  scoring_explanation.py  test_api.py  test_file_processing.py  text_flowchart.py
data/: jd_test.txt  sample.docx
data2/: skills_database.txt  train_data.json  train_data_vi.json  val_data.json
frontend/: middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  test-auth.js
generated_cvs/: cv_001.json  cv_002.json  cv_003.json  cv_004.json  cv_005.json  cv_006.json  cv_007.json  cv_008.json  cv_009.json  cv_010.json  cv_011.json  cv_012.json  cv_013.json  cv_014.json  cv_015.json  cv_016.json  cv_017.json  cv_018.json  cv_019.json  cv_020.json  cv_021.json  cv_022.json  cv_023.json  cv_024.json  cv_025.json  (+75 more)
jobmatch-ai/: SYSTEM_README.md  pyproject.toml
jobmatch-ai/cv-matching-frontend/: .gitignore  README.md  install.bat  package.json  start.bat
jobmatch-ai/cv-matching-frontend/app/: globals.css  layout.tsx
jobmatch-ai/cv_match_API/: create_flowchart.py  main.py  run_api.py
(+332 files in other folders)
